# website_lead_scores

./: .gitignore  README.md  dvc.yaml  fast.py  main.py  pyproject.toml  template.py
artifacts/data_ingestion/: website_visitors.parquet.dvc
checks/: checks.yaml
config/: data-ingestion.yaml  data-schema.yaml  data-transformation.yaml  data-validation.yaml  model-evaluation.yaml  model-params.yaml  model-trainer.yaml  model-validation.yaml  prediction.yaml  wandb.yaml
dags/: lead_scoring_pipeline.py
experiment/: ge.py  trial_01_data_ingestion.py  trial_02_data_validation.py  trial_03_data_transformation.py  trial_04_model_trainer.py  trial_05_model_evaluation.py  trial_06_model_validation.py
notebooks/: data_loader.ipynb  lead_score_model_prototype.ipynb
src/lead_scoring/: exception.py  logger.py
src/lead_scoring/components/: c_01_data_ingestion.py  c_02_data_validation.py  c_03_data_transformation.py  c_04_model_trainer.py  c_05_model_evaluation.py  c_06_model_validation.py
src/lead_scoring/config_entity/: config_params.py
src/lead_scoring/config_manager/: config_settings.py
src/lead_scoring/constants/: __init__.py
src/lead_scoring/pipelines/: pip_01_data_ingestion.py  pip_02_data_validation.py  pip_03_data_transformation.py  pip_04_model_trainer.py  pip_05_model_evaluation.py  pip_06_model_validation.py  pip_07_prediction_pipeline.py
src/lead_scoring/utils/: commons.py
templates/: home.html  index.html
